2010-03-24  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Rewritten lastByteMask
	* src/bitfield.h

2010-03-23  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Redefined the maximum length of buffer used for HTTP header.
	* src/HttpHeaderProcessor.cc

2010-03-22  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Code cleanup
	* src/SleepCommand.cc

2010-03-22  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Do exact match if IP address is specified in --no-proxy.
	* src/AbstractCommand.cc

2010-03-22  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed the bug that socket is added to EventPoll object twice. This
	is because derived class FtpFinishDownloadCommand adds socket to
	EventPoll object while base class AbstractCommand does that
	already.
	* src/FtpFinishDownloadCommand.cc
	* src/FtpFinishDownloadCommand.h

2010-03-21  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Defined gid_t as int64_t.
	* src/BtDependency.cc
	* src/BtStopDownloadCommand.cc
	* src/FtpNegotiationCommand.cc
	* src/HttpResponseCommand.cc
	* src/RequestGroup.cc
	* src/RequestGroup.h
	* src/RequestGroupMan.cc
	* src/TrackerWatcherCommand.cc
	* src/XmlRpcMethodImpl.cc
	* src/message.h
	* test/XmlRpcMethodTest.cc

2010-03-21  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Defined cuid_t as int64_t. Removed texts containing "CUID#%D" from
	translatable texts because it is used in log and debugging
	purpose.
	* src/AbstractCommand.cc
	* src/ActivePeerConnectionCommand.cc
	* src/BtPieceMessage.cc
	* src/CUIDCounter.h
	* src/CheckIntegrityCommand.cc
	* src/CheckIntegrityDispatcherCommand.cc
	* src/Command.h
	* src/CreateRequestCommand.cc
	* src/DHTEntryPointNameResolveCommand.cc
	* src/DefaultBtInteractive.cc
	* src/DefaultBtMessageDispatcher.cc
	* src/DownloadCommand.cc
	* src/FileAllocationCommand.cc
	* src/FileAllocationDispatcherCommand.cc
	* src/FtpConnection.cc
	* src/FtpInitiateConnectionCommand.cc